# ai-maker-space-challenge

./: .gitignore  ACTIVITIES.md  LICENSE  MERGE.md  README.md  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: backend-rule.mdc  frontend-rule.mdc
aimakerspace/: text_utils.py
api/: app.py  knowledge.py  requirements.txt
api/routes/openai/: testing_developer_usage_route.py
app/: hello_world.ipynb  hello_world.py
core/: config.py  logger.py  qdrant_client.py
docs/: GIT_SETUP.md
frontend/: README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/__tests__/: ChatContainer.test.tsx
frontend/__tests__/components/: Button.test.tsx  ErrorBanner.test.tsx  HealthCheckProvider.test.tsx  ThemeToggle.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HealthCheckProvider.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  ChatTitle.tsx  CopyEntireResponseButton.tsx  ErrorBanner.tsx  KnowledgeManager.tsx  KnowledgeUploader.tsx  LoadingIndicator.tsx  MarkdownRenderer.tsx  MobilePreferences.tsx  ModelSelector.tsx  ResponseActions.tsx  SettingsModal.tsx
frontend/components/ui/: Button.tsx  (+3 more)
frontend/hooks/: useTypewriter.ts
frontend/lib/: api.ts  fileValidator.ts  healthCheck.ts  sessions.ts  settings.ts  utils.ts
frontend/types/: chat.ts
rag/: __init__.py  ingest.py  prompts.py  retrieve.py
schemas/: openai_schemas.py
utils/openai/: responses.py
(+5 files in other folders)
